--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -1,8 +1,8 @@
 @article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+  title = {Understanding how an amphicarpic species with a mixed mating system responds to fire: a population genetic approach},
+  author={Elena M. Meyer, Joel F. Swift, Burgund Bassüner, Stacy A. Smith, Eric S. Menges, Brad Oberle, Christine E. Edwards},
+  journal = {AoB Plants,
+  year    = 2021,
+  volume  = 13,
+  number  = 6
 }
